--- a/HomePage.css
+++ b/HomePage.css
@@ -10,6 +10,9 @@ body {
 
 /*pjesa ehero headeri css */
 .hero-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
     text-align: center;
     color: white;
@@ -38,7 +41,7 @@ body {
 
 h1 {
     font-size: 70px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 
 h2 {
@@ -55,10 +58,14 @@ h2 {
     background: #f6f6f6;
     width: 100%;
     max-width: 700px;
+    transition: box-shadow 0.25s;;
     margin: 20px auto;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.25);
 }
-
+/*Lema qet efekt se po mpelqen*/
+.search:focus-within{
+    box-shadow: 0 0 2px rgba(0,0,0,0.75);
+}
 .search-input {
     flex-grow: 1;
     font-size: 16px;
