--- a/ErrorPage.css
+++ b/ErrorPage.css
@@ -14,6 +14,7 @@ body{
     width: 500px;
     margin: 40px;
 }
+
 .explanation h1{
     font-size: 40px;
     margin-bottom: 20px;
@@ -29,4 +30,12 @@ body{
     border-radius: 10px;
     font-size: 16px;
     text-decoration: none;
+}
+@media (max-width: 600px) {
+    .errorContainer img{
+        width: 300px;
+    }
+    .explanation h1{
+        font-size: 28px;
+    }
 }
