--- a/HomePage.css
+++ b/HomePage.css
@@ -13,6 +13,14 @@ body {
     text-decoration: none;
     border: none;
 }
+.signIn a{
+    color: white;
+    text-decoration: none;
+    background-color: #03506f;
+}
+button.signIn{
+    background-color: #03506f;
+}
 
 /*pjesa ehero headeri css */
 .hero-section {
