--- a/Itineraries.css
+++ b/Itineraries.css
@@ -159,3 +159,11 @@ body{
     color: white;
     text-decoration: none;
 }
+.signIn a{
+    color: white;
+    text-decoration: none;
+    background-color: #03506f;
+}
+button.signIn{
+    background-color: #03506f;
+}
