--- a/AboutUs.css
+++ b/AboutUs.css
@@ -210,3 +210,11 @@ body {
     color: white;
     text-decoration: none;
 }
+.signIn a{
+    color: white;
+    text-decoration: none;
+    background-color: #03506f;
+}
+button.signIn{
+    background-color: #03506f;
+}
