--- a/Itineraries.css
+++ b/Itineraries.css
@@ -79,10 +79,23 @@ body{
     align-items: center;
    
 }
+.pop-now2{
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+}
 .pop-now span{
     font-size: 40px;
     color: #023047;
     margin-top: 60px;
+    margin-bottom: 30px;
+}
+.pop-now2 span{
+    font-size: 40px;
+    color: #023047;
     margin-bottom: 30px;
 }
 
