--- a/Itineraries.css
+++ b/Itineraries.css
@@ -105,6 +105,7 @@ body{
     gap: 20px;
     margin-top: 30px;
     justify-content: center;
+    margin-bottom: 30px;
 }
 .box{
     display: flex;
@@ -163,6 +164,10 @@ body{
 }
 .view-more-btn:hover {
     transform: translateY(-4px);
+}
+.plane-down{
+    height: 20px;
+    rotate: -180deg;
 }
 
 .hidden {
