--- a/Template.css
+++ b/Template.css
@@ -1,4 +1,3 @@
-/* General Reset */
 * {
     margin: 0;
     padding: 0;
@@ -9,8 +8,6 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #F5FDFF;
 }
-
-
 
 h2 {
     font-size: 36px;
@@ -92,14 +89,18 @@ p {
     .fillimi, .day {
         padding: 24px;
     }
+    .day p{
+        width: 80%;
+    }
+    .day {
+        margin: 20px;
+    }
 }
 
 @media (max-width: 576px) {
-    body {
-        padding: 20px;
+   
+    .day p{
+        width: 80%;
     }
-
-    img {
-        border-radius: 5px;
-    }
+ 
 }
