--- a/Template.css
+++ b/Template.css
@@ -9,24 +9,25 @@ body {
     background-color: #F5FDFF;
 }
 
-h2 {
+.day h2 {
     font-size: 36px;
     color: #2c3e50;
     margin-bottom:26px;
 }
 
-h6 {
+.day h6 {
     font-size: 16px;
     color: #7f8c8d;
     margin-top: 16px;
 }
 
-p {
+.day p {
     font-size: 16px;
     color: #555;
     margin-bottom: 16px;
     line-height: 1.8;
     text-align: center;
+    width: 50%;
 }
 
 
@@ -68,11 +69,6 @@ p {
     border-radius: 10px;
     text-align: center;
 }
-
-.day p{
-    width: 50%;
-}
-
 @media (max-width: 768px) {
     h2 {
         font-size: 24px;
