--- a/components/NavBar.html
+++ b/components/NavBar.html
@@ -18,8 +18,8 @@
             <a href="AboutUs.php">About Us</a>
         </nav>
         <div class="registerButtons">
-            <button class="signIn"><a href="Register.html">Sign Up</a></button>
-            <button class="logIn"><a href="LogIn.html">Log In</a></button>
+            <button class="signIn"><a href="Register.php">Sign Up</a></button>
+            <button class="logIn"><a href="LogIn.php">Log In</a></button>
         </div>
         <button class="hamburgerMenu" aria-label="Toggle menu">
             ☰
