--- a/CRUD/Dashboard.css
+++ b/CRUD/Dashboard.css
@@ -7,7 +7,7 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #F5FDFF;
     margin: 0;
-    padding: 0;
+    padding: 10px;
 }
 
 .header {
