log in authentication fix

--- a/components/NavBar.html
+++ b/components/NavBar.html
@@ -19,7 +19,7 @@
         </nav>
         <div class="registerButtons">
             <button class="signIn"><a href="Register.php">Sign Up</a></button>
-            <button class="logIn"><a href="LogIn.php">Log In</a></button>
+            <button class="logIn"><a href="./CRUD/LogIn.php">Log In</a></button>
         </div>
         <button class="hamburgerMenu" aria-label="Toggle menu">
             ☰
