--- a/components/Footer.html
+++ b/components/Footer.html
@@ -12,7 +12,7 @@
         <img class="social-icon" src="./assets/instakuku.png" alt="Instalogo">
         <img class="social-icon" src="./assets/FB2-logo.png" alt="Xlogo">
         <img class="social-icon" src="./assets/Youtube-logo.png" alt="Youtubelogo">
-        <img class="social-icon" src="./assets/Linkedin-logo-black.png" alt="Linkedinlogo">
+        <img class="social-icon" src="./assets/linkedin-icon.png" alt="Linkedinlogo">
       </div>
       <div class="footerContainer">
         <ul>
